--- a/LocationSvc/Web.config
+++ b/LocationSvc/Web.config
@@ -5,6 +5,9 @@
   -->
 <configuration>
   <appSettings>
+    <add key="ida:Tenant" value="petrofaconline.onmicrosoft.com" />
+    <add key="ida:Audience" value="https://petrofaconline.onmicrosoft.com/PetrofacLocationSvc" />
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -20,13 +23,7 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-    <httpProtocol>
-      <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, OPTIONS, PUT, DELETE" />
-      </customHeaders>
-    </httpProtocol>
+    </handlers>   
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
