--- a/LocationSvc/Web.config
+++ b/LocationSvc/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <appSettings>
-    <add key="ida:Tenant" value="petrofaconline.onmicrosoft.com" />
-    <add key="ida:Audience" value="https://petrofaconline.onmicrosoft.com/PetrofacLocationSvc" />
+    <add key="ida:Tenant" value="xyz.onmicrosoft.com" />
+    <add key="ida:Audience" value="https://xyz.onmicrosoft.com/xyzLocationSvc" />
     
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
